DE486 Added return to profile button, fixed css to make spacing consistent.

--- a/src/main/webapp/resources/css/mentormarketplace.css
+++ b/src/main/webapp/resources/css/mentormarketplace.css
@@ -555,5 +555,9 @@ body {
 }
 
 #navBarExploreButton {
-    margin-right: 15px;
+    margin-right: 7px;
+}
+
+#navBarProfileButton{
+    margin-right:7px;
 }
